--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
-@import 'tailwindcss/base';
+/* @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
+@import 'tailwindcss/utilities'; */
+
+
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+
+#root{
+  height: 100vh;
+}
